etapa6/y.output
Nonterminals useless in grammar

    literal_withstring


Terminals unused in grammar

    TOKEN_ERROR
    '^'


Rules useless in grammar

   77 literal_withstring: LIT_CHAR
   78                   | LIT_INTEGER
   79                   | LIT_STRING


State 40 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: data_decl

    2 data_decl: KW_DATA decl_block functionlist

    3 decl_block: '{' declist '}'

    4 cmd_list: cmd ';' cmd_list
    5         | cmd ';'

    6 cmd: identifier '=' expression
    7    | identifier '[' expression ']' '=' expression
    8    | KW_PRINT expression_list
    9    | KW_RETURN expression
   10    | KW_COMEFROM ':' expression
   11    | flow_control
   12    | block
   13    | identifier literal
   14    | identifier

   15 flow_control: KW_IF '(' expression ')' cmd
   16             | KW_IF '(' expression ')' cmd KW_ELSE cmd
   17             | KW_UNTIL '(' expression ')' cmd

   18 block: '{' cmd_list '}'
   19      | '{' '}'

   20 expression: identifier
   21           | identifier '[' expression ']'
   22           | expression '+' expression
   23           | expression '-' expression
   24           | expression '*' expression
   25           | expression '/' expression
   26           | expression '<' expression
   27           | expression '>' expression
   28           | expression '|' expression
   29           | expression '&' expression
   30           | '~' expression
   31           | '(' expression ')'
   32           | expression OPERATOR_LE expression
   33           | expression OPERATOR_GE expression
   34           | expression OPERATOR_EQ expression
   35           | expression OPERATOR_DIF expression
   36           | identifier literal
   37           | KW_READ
   38           | functioncall
   39           | LIT_CHAR
   40           | LIT_INTEGER
   41           | LIT_STRING

   42 expression_list: expression
   43                | expression ',' expression_list

   44 functioncall: identifier '(' parameter parameterslist ')'
   45             | identifier '(' ')'
   46             | identifier '(' parameter ')'

   47 parameterslist: ',' parameter parameterslist
   48               | %empty

   49 parameter: identifier
   50          | literal

   51 functionlist: function functionlist
   52             | %empty

   53 function: type ':' identifier '(' parameter_init parameterslist_init ')' block
   54         | type ':' identifier '(' ')' block
   55         | type ':' identifier '(' parameter_init ')' block

   56 parameterslist_init: ',' parameter_init parameterslist_init
   57                    | %empty

   58 parameter_init: type ':' identifier

   59 declist: dec ';' declist
   60        | %empty

   61 dec: type ':' identifier '=' literal
   62    | type '[' literal ']' ':' identifier '=' litlist
   63    | type '[' range_values OPERATOR_RANGE range_values ']' ':' identifier '=' litlist
   64    | type '[' range_values OPERATOR_RANGE range_values ']' ':' identifier
   65    | type '[' literal ']' ':' identifier
   66    | %empty

   67 litlist: literal litlist
   68        | %empty

   69 range_values: LIT_INTEGER

   70 literal: LIT_CHAR
   71        | LIT_INTEGER

   72 identifier: TK_IDENTIFIER

   73 type: KW_INT
   74     | KW_FLOAT
   75     | KW_CHAR
   76     | %empty


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 29
    '(' (40) 15 16 17 31 44 45 46 53 54 55
    ')' (41) 15 16 17 31 44 45 46 53 54 55
    '*' (42) 24
    '+' (43) 22
    ',' (44) 43 47 56
    '-' (45) 23
    '/' (47) 25
    ':' (58) 10 53 54 55 58 61 62 63 64 65
    ';' (59) 4 5 59
    '<' (60) 26
    '=' (61) 6 7 61 62 63
    '>' (62) 27
    '[' (91) 7 21 62 63 64 65
    ']' (93) 7 21 62 63 64 65
    '^' (94)
    '{' (123) 3 18 19
    '|' (124) 28
    '}' (125) 3 18 19
    '~' (126) 30
    error (256)
    KW_CHAR (258) 75
    KW_INT (259) 73
    KW_FLOAT (260) 74
    KW_DATA <ast> (261) 2
    KW_IF (262) 15 16
    KW_ELSE (263) 16
    KW_UNTIL (264) 17
    KW_COMEFROM (265) 10
    KW_READ (266) 37
    KW_PRINT (267) 8
    KW_RETURN (268) 9
    OPERATOR_LE (269) 32
    OPERATOR_GE (270) 33
    OPERATOR_EQ (271) 34
    OPERATOR_DIF (272) 35
    OPERATOR_RANGE (273) 63 64
    TK_IDENTIFIER <symbol> (274) 72
    LIT_INTEGER <symbol> (275) 40 69 71
    LIT_CHAR <symbol> (276) 39 70
    LIT_STRING <symbol> (277) 41
    TOKEN_ERROR (278)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <ast> (45)
        on left: 1
        on right: 0
    data_decl <ast> (46)
        on left: 2
        on right: 1
    decl_block <ast> (47)
        on left: 3
        on right: 2
    cmd_list <ast> (48)
        on left: 4 5
        on right: 4 18
    cmd <ast> (49)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 4 5 15 16 17
    flow_control <ast> (50)
        on left: 15 16 17
        on right: 11
    block <ast> (51)
        on left: 18 19
        on right: 12 53 54 55
    expression <ast> (52)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 6 7 9 10 15 16 17 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 42 43
    expression_list <ast> (53)
        on left: 42 43
        on right: 8 43
    functioncall <ast> (54)
        on left: 44 45 46
        on right: 38
    parameterslist <ast> (55)
        on left: 47 48
        on right: 44 47
    parameter <ast> (56)
        on left: 49 50
        on right: 44 46 47
    functionlist <ast> (57)
        on left: 51 52
        on right: 2 51
    function <ast> (58)
        on left: 53 54 55
        on right: 51
    parameterslist_init <ast> (59)
        on left: 56 57
        on right: 53 56
    parameter_init <ast> (60)
        on left: 58
        on right: 53 55 56
    declist <ast> (61)
        on left: 59 60
        on right: 3 59
    dec <ast> (62)
        on left: 61 62 63 64 65 66
        on right: 59
    litlist <ast> (63)
        on left: 67 68
        on right: 62 63 67
    range_values <ast> (64)
        on left: 69
        on right: 63 64
    literal <ast> (65)
        on left: 70 71
        on right: 13 36 50 61 62 65 67
    identifier <ast> (66)
        on left: 72
        on right: 6 7 13 14 20 21 36 44 45 46 49 53 54 55 58 61 62 63 64 65
    type <ast> (67)
        on left: 73 74 75 76
        on right: 53 54 55 58 61 62 63 64 65


State 0

    0 $accept: . program $end

    KW_DATA  shift, and go to state 1

    program    go to state 2
    data_decl  go to state 3


State 1

    2 data_decl: KW_DATA . decl_block functionlist

    '{'  shift, and go to state 4

    decl_block  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: data_decl .

    $default  reduce using rule 1 (program)


State 4

    3 decl_block: '{' . declist '}'

    KW_CHAR   shift, and go to state 7
    KW_INT    shift, and go to state 8
    KW_FLOAT  shift, and go to state 9

    '}'       reduce using rule 60 (declist)
    ';'       reduce using rule 66 (dec)
    $default  reduce using rule 76 (type)

    declist  go to state 10
    dec      go to state 11
    type     go to state 12


State 5

    2 data_decl: KW_DATA decl_block . functionlist

    KW_CHAR   shift, and go to state 7
    KW_INT    shift, and go to state 8
    KW_FLOAT  shift, and go to state 9

    ':'       reduce using rule 76 (type)
    $default  reduce using rule 52 (functionlist)

    functionlist  go to state 13
    function      go to state 14
    type          go to state 15


State 6

    0 $accept: program $end .

    $default  accept


State 7

   75 type: KW_CHAR .

    $default  reduce using rule 75 (type)


State 8

   73 type: KW_INT .

    $default  reduce using rule 73 (type)


State 9

   74 type: KW_FLOAT .

    $default  reduce using rule 74 (type)


State 10

    3 decl_block: '{' declist . '}'

    '}'  shift, and go to state 16


State 11

   59 declist: dec . ';' declist

    ';'  shift, and go to state 17


State 12

   61 dec: type . ':' identifier '=' literal
   62    | type . '[' literal ']' ':' identifier '=' litlist
   63    | type . '[' range_values OPERATOR_RANGE range_values ']' ':' identifier '=' litlist
   64    | type . '[' range_values OPERATOR_RANGE range_values ']' ':' identifier
   65    | type . '[' literal ']' ':' identifier

    '['  shift, and go to state 18
    ':'  shift, and go to state 19


State 13

    2 data_decl: KW_DATA decl_block functionlist .

    $default  reduce using rule 2 (data_decl)


State 14

   51 functionlist: function . functionlist

    KW_CHAR   shift, and go to state 7
    KW_INT    shift, and go to state 8
    KW_FLOAT  shift, and go to state 9

    ':'       reduce using rule 76 (type)
    $default  reduce using rule 52 (functionlist)

    functionlist  go to state 20
    function      go to state 14
    type          go to state 15


State 15

   53 function: type . ':' identifier '(' parameter_init parameterslist_init ')' block
   54         | type . ':' identifier '(' ')' block
   55         | type . ':' identifier '(' parameter_init ')' block

    ':'  shift, and go to state 21


State 16

    3 decl_block: '{' declist '}' .

    $default  reduce using rule 3 (decl_block)


State 17

   59 declist: dec ';' . declist

    KW_CHAR   shift, and go to state 7
    KW_INT    shift, and go to state 8
    KW_FLOAT  shift, and go to state 9

    '}'       reduce using rule 60 (declist)
    ';'       reduce using rule 66 (dec)
    $default  reduce using rule 76 (type)

    declist  go to state 22
    dec      go to state 11
    type     go to state 12


State 18

   62 dec: type '[' . literal ']' ':' identifier '=' litlist
   63    | type '[' . range_values OPERATOR_RANGE range_values ']' ':' identifier '=' litlist
   64    | type '[' . range_values OPERATOR_RANGE range_values ']' ':' identifier
   65    | type '[' . literal ']' ':' identifier

    LIT_INTEGER  shift, and go to state 23
    LIT_CHAR     shift, and go to state 24

    range_values  go to state 25
    literal       go to state 26


State 19

   61 dec: type ':' . identifier '=' literal

    TK_IDENTIFIER  shift, and go to state 27

    identifier  go to state 28


State 20

   51 functionlist: function functionlist .

    $default  reduce using rule 51 (functionlist)


State 21

   53 function: type ':' . identifier '(' parameter_init parameterslist_init ')' block
   54         | type ':' . identifier '(' ')' block
   55         | type ':' . identifier '(' parameter_init ')' block

    TK_IDENTIFIER  shift, and go to state 27

    identifier  go to state 29


State 22

   59 declist: dec ';' declist .

    $default  reduce using rule 59 (declist)


State 23

   69 range_values: LIT_INTEGER .
   71 literal: LIT_INTEGER .

    ']'       reduce using rule 71 (literal)
    $default  reduce using rule 69 (range_values)


State 24

   70 literal: LIT_CHAR .

    $default  reduce using rule 70 (literal)


State 25

   63 dec: type '[' range_values . OPERATOR_RANGE range_values ']' ':' identifier '=' litlist
   64    | type '[' range_values . OPERATOR_RANGE range_values ']' ':' identifier

    OPERATOR_RANGE  shift, and go to state 30


State 26

   62 dec: type '[' literal . ']' ':' identifier '=' litlist
   65    | type '[' literal . ']' ':' identifier

    ']'  shift, and go to state 31


State 27

   72 identifier: TK_IDENTIFIER .

    $default  reduce using rule 72 (identifier)


State 28

   61 dec: type ':' identifier . '=' literal

    '='  shift, and go to state 32


State 29

   53 function: type ':' identifier . '(' parameter_init parameterslist_init ')' block
   54         | type ':' identifier . '(' ')' block
   55         | type ':' identifier . '(' parameter_init ')' block

    '('  shift, and go to state 33


State 30

   63 dec: type '[' range_values OPERATOR_RANGE . range_values ']' ':' identifier '=' litlist
   64    | type '[' range_values OPERATOR_RANGE . range_values ']' ':' identifier

    LIT_INTEGER  shift, and go to state 34

    range_values  go to state 35


State 31

   62 dec: type '[' literal ']' . ':' identifier '=' litlist
   65    | type '[' literal ']' . ':' identifier

    ':'  shift, and go to state 36


State 32

   61 dec: type ':' identifier '=' . literal

    LIT_INTEGER  shift, and go to state 37
    LIT_CHAR     shift, and go to state 24

    literal  go to state 38


State 33

   53 function: type ':' identifier '(' . parameter_init parameterslist_init ')' block
   54         | type ':' identifier '(' . ')' block
   55         | type ':' identifier '(' . parameter_init ')' block

    KW_CHAR   shift, and go to state 7
    KW_INT    shift, and go to state 8
    KW_FLOAT  shift, and go to state 9
    ')'       shift, and go to state 39

    $default  reduce using rule 76 (type)

    parameter_init  go to state 40
    type            go to state 41


State 34

   69 range_values: LIT_INTEGER .

    $default  reduce using rule 69 (range_values)


State 35

   63 dec: type '[' range_values OPERATOR_RANGE range_values . ']' ':' identifier '=' litlist
   64    | type '[' range_values OPERATOR_RANGE range_values . ']' ':' identifier

    ']'  shift, and go to state 42


State 36

   62 dec: type '[' literal ']' ':' . identifier '=' litlist
   65    | type '[' literal ']' ':' . identifier

    TK_IDENTIFIER  shift, and go to state 27

    identifier  go to state 43


State 37

   71 literal: LIT_INTEGER .

    $default  reduce using rule 71 (literal)


State 38

   61 dec: type ':' identifier '=' literal .

    $default  reduce using rule 61 (dec)


State 39

   54 function: type ':' identifier '(' ')' . block

    '{'  shift, and go to state 44

    block  go to state 45


State 40

   53 function: type ':' identifier '(' parameter_init . parameterslist_init ')' block
   55         | type ':' identifier '(' parameter_init . ')' block

    ')'  shift, and go to state 46
    ','  shift, and go to state 47

    ')'  [reduce using rule 57 (parameterslist_init)]

    parameterslist_init  go to state 48


State 41

   58 parameter_init: type . ':' identifier

    ':'  shift, and go to state 49


State 42

   63 dec: type '[' range_values OPERATOR_RANGE range_values ']' . ':' identifier '=' litlist
   64    | type '[' range_values OPERATOR_RANGE range_values ']' . ':' identifier

    ':'  shift, and go to state 50


State 43

   62 dec: type '[' literal ']' ':' identifier . '=' litlist
   65    | type '[' literal ']' ':' identifier .

    '='  shift, and go to state 51

    $default  reduce using rule 65 (dec)


State 44

   18 block: '{' . cmd_list '}'
   19      | '{' . '}'

    KW_IF          shift, and go to state 52
    KW_UNTIL       shift, and go to state 53
    KW_COMEFROM    shift, and go to state 54
    KW_PRINT       shift, and go to state 55
    KW_RETURN      shift, and go to state 56
    TK_IDENTIFIER  shift, and go to state 27
    '{'            shift, and go to state 44
    '}'            shift, and go to state 57

    cmd_list      go to state 58
    cmd           go to state 59
    flow_control  go to state 60
    block         go to state 61
    identifier    go to state 62


State 45

   54 function: type ':' identifier '(' ')' block .

    $default  reduce using rule 54 (function)


State 46

   55 function: type ':' identifier '(' parameter_init ')' . block

    '{'  shift, and go to state 44

    block  go to state 63


State 47

   56 parameterslist_init: ',' . parameter_init parameterslist_init

    KW_CHAR   shift, and go to state 7
    KW_INT    shift, and go to state 8
    KW_FLOAT  shift, and go to state 9

    $default  reduce using rule 76 (type)

    parameter_init  go to state 64
    type            go to state 41


State 48

   53 function: type ':' identifier '(' parameter_init parameterslist_init . ')' block

    ')'  shift, and go to state 65


State 49

   58 parameter_init: type ':' . identifier

    TK_IDENTIFIER  shift, and go to state 27

    identifier  go to state 66


State 50

   63 dec: type '[' range_values OPERATOR_RANGE range_values ']' ':' . identifier '=' litlist
   64    | type '[' range_values OPERATOR_RANGE range_values ']' ':' . identifier

    TK_IDENTIFIER  shift, and go to state 27

    identifier  go to state 67


State 51

   62 dec: type '[' literal ']' ':' identifier '=' . litlist

    LIT_INTEGER  shift, and go to state 37
    LIT_CHAR     shift, and go to state 24

    $default  reduce using rule 68 (litlist)

    litlist  go to state 68
    literal  go to state 69


State 52

   15 flow_control: KW_IF . '(' expression ')' cmd
   16             | KW_IF . '(' expression ')' cmd KW_ELSE cmd

    '('  shift, and go to state 70


State 53

   17 flow_control: KW_UNTIL . '(' expression ')' cmd

    '('  shift, and go to state 71


State 54

   10 cmd: KW_COMEFROM . ':' expression

    ':'  shift, and go to state 72


State 55

    8 cmd: KW_PRINT . expression_list

    KW_READ        shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 74
    LIT_CHAR       shift, and go to state 75
    LIT_STRING     shift, and go to state 76
    '~'            shift, and go to state 77
    '('            shift, and go to state 78

    expression       go to state 79
    expression_list  go to state 80
    functioncall     go to state 81
    identifier       go to state 82


State 56

    9 cmd: KW_RETURN . expression

    KW_READ        shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 74
    LIT_CHAR       shift, and go to state 75
    LIT_STRING     shift, and go to state 76
    '~'            shift, and go to state 77
    '('            shift, and go to state 78

    expression    go to state 83
    functioncall  go to state 81
    identifier    go to state 82


State 57

   19 block: '{' '}' .

    $default  reduce using rule 19 (block)


State 58

   18 block: '{' cmd_list . '}'

    '}'  shift, and go to state 84


State 59

    4 cmd_list: cmd . ';' cmd_list
    5         | cmd . ';'

    ';'  shift, and go to state 85


State 60

   11 cmd: flow_control .

    $default  reduce using rule 11 (cmd)


State 61

   12 cmd: block .

    $default  reduce using rule 12 (cmd)


State 62

    6 cmd: identifier . '=' expression
    7    | identifier . '[' expression ']' '=' expression
   13    | identifier . literal
   14    | identifier .

    LIT_INTEGER  shift, and go to state 37
    LIT_CHAR     shift, and go to state 24
    '='          shift, and go to state 86
    '['          shift, and go to state 87

    $default  reduce using rule 14 (cmd)

    literal  go to state 88


State 63

   55 function: type ':' identifier '(' parameter_init ')' block .

    $default  reduce using rule 55 (function)


State 64

   56 parameterslist_init: ',' parameter_init . parameterslist_init

    ','  shift, and go to state 47

    $default  reduce using rule 57 (parameterslist_init)

    parameterslist_init  go to state 89


State 65

   53 function: type ':' identifier '(' parameter_init parameterslist_init ')' . block

    '{'  shift, and go to state 44

    block  go to state 90


State 66

   58 parameter_init: type ':' identifier .

    $default  reduce using rule 58 (parameter_init)


State 67

   63 dec: type '[' range_values OPERATOR_RANGE range_values ']' ':' identifier . '=' litlist
   64    | type '[' range_values OPERATOR_RANGE range_values ']' ':' identifier .

    '='  shift, and go to state 91

    $default  reduce using rule 64 (dec)


State 68

   62 dec: type '[' literal ']' ':' identifier '=' litlist .

    $default  reduce using rule 62 (dec)


State 69

   67 litlist: literal . litlist

    LIT_INTEGER  shift, and go to state 37
    LIT_CHAR     shift, and go to state 24

    $default  reduce using rule 68 (litlist)

    litlist  go to state 92
    literal  go to state 69


State 70

   15 flow_control: KW_IF '(' . expression ')' cmd
   16             | KW_IF '(' . expression ')' cmd KW_ELSE cmd

    KW_READ        shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 74
    LIT_CHAR       shift, and go to state 75
    LIT_STRING     shift, and go to state 76
    '~'            shift, and go to state 77
    '('            shift, and go to state 78

    expression    go to state 93
    functioncall  go to state 81
    identifier    go to state 82


State 71

   17 flow_control: KW_UNTIL '(' . expression ')' cmd

    KW_READ        shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 74
    LIT_CHAR       shift, and go to state 75
    LIT_STRING     shift, and go to state 76
    '~'            shift, and go to state 77
    '('            shift, and go to state 78

    expression    go to state 94
    functioncall  go to state 81
    identifier    go to state 82


State 72

   10 cmd: KW_COMEFROM ':' . expression

    KW_READ        shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 74
    LIT_CHAR       shift, and go to state 75
    LIT_STRING     shift, and go to state 76
    '~'            shift, and go to state 77
    '('            shift, and go to state 78

    expression    go to state 95
    functioncall  go to state 81
    identifier    go to state 82


State 73

   37 expression: KW_READ .

    $default  reduce using rule 37 (expression)


State 74

   40 expression: LIT_INTEGER .

    $default  reduce using rule 40 (expression)


State 75

   39 expression: LIT_CHAR .

    $default  reduce using rule 39 (expression)


State 76

   41 expression: LIT_STRING .

    $default  reduce using rule 41 (expression)


State 77

   30 expression: '~' . expression

    KW_READ        shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 74
    LIT_CHAR       shift, and go to state 75
    LIT_STRING     shift, and go to state 76
    '~'            shift, and go to state 77
    '('            shift, and go to state 78

    expression    go to state 96
    functioncall  go to state 81
    identifier    go to state 82


State 78

   31 expression: '(' . expression ')'

    KW_READ        shift, and go to state 73
    TK_IDENTIFIER  shift, and go to state 27
    LIT_INTEGER    shift, and go to state 74
    LIT_CHAR       shift, and go to state 75
    LIT_STRING     shift, and go to state 76
    '~'            shift, and go to state 77
    '('            shift, and go to state 78

    expression    go to state 97
    functioncall  go to state 81
    identifier    go to state 82


State 79

   22 expression: expression . '+' expression
   23           | expression . '-' expression
   24           | expression . '*' expression
   25           | expression . '/' expression
   26           | expression . '<' expression
   27           | expression . '>' expression
   28           | expression . '|' expression
   29           | expression . '&' expression
   32           | expression . OPERATOR_LE expression
   33           | expression . OPERATOR_GE expression
   34           | expression . OPERATOR_EQ expression
   35           | expression . OPERATOR_DIF expression
   42 expression_list: expression .
   43                | expression . ',' expression_list

    OPERATOR_LE   shift, and go to state 98
    OPERATOR_GE   shift, and go to state 99
    OPERATOR_EQ   shift, and go to state 100
    OPERATOR_DIF  shift, and go to state 101
    '<'           shift, and go to state 102
    '>'           shift, and go to state 103
    '&'           shift, and go to state 104
    '|'           shift, and go to state 105
    '+'           shift, and go to state 106
    '-'           shift, and go to state 107
    '*'           shift, and go to state 108
    '/'           shift, and go to state 109
    ','           shift, and go to state 110

    $default  reduce using rule 42 (expression_list)


State 80

    8 cmd: KW_PRINT expression_list .

    $default  reduce using rule 8 (cmd)


State 81

   38 expression: functioncall .

    $default  reduce using rule 38 (expression)


State 82

   20 expression: identifier .
   21           | identifier . '[' expression ']'
   36           | identifier . literal
   44 functioncall: identifier . '(' parameter parameterslist ')'
   45             | identifier . '(' ')'
   46             | identifier . '(' parameter ')'

    LIT_INTEGER  shift, and go to state 37
    LIT_CHAR     shift, and go to state 24
    '['          shift, and go to state 111
    '('          shift, and go to state 112

    $default  reduce using rule 20 (expression)

    literal  go to state 113


State 83
